--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     </div>
     <div class="menu--bar"><i class="icon-menu"></i></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/smooth-scroll.polyfills.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
