--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                         <li class="menu--items"><a href="#portfolios" class="menu--item">portafolio</a></li>
                         <li class="menu--items"><a href="#contacts" class="menu--item">contacto</a></li>
                     </ul>
+                    <div class="menu--bar" id="menu--bar">
+                        <span class="" id="icon"></span>
+                    </div>
+                    <ul class="menu--mobile" id="menu-mobile">
+                        <li class="menu--items"><a href="#header" class="menu--item">inicio</a></li>
+                        <li class="menu--items"><a href="#about" class="menu--item">sobre mi</a></li>
+                        <li class="menu--items"><a href="#services" class="menu--item">sevicios</a></li>
+                        <li class="menu--items"><a href="#portfolios" class="menu--item">portafolio</a></li>
+                        <li class="menu--items"><a href="#contacts" class="menu--item">contacto</a></li>
+                    </ul>
                 </nav>
             </div>
         </div>
@@ -48,11 +58,9 @@
         <div class="margin--outside">
             <h2 class="about--title">Sobre mi</h2>
             <div class="about--container">
-                
                 <article class="abouts" >
                     <p class="about--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum minus esse earum sapiente adipisci quos, repellat beatae reprehenderit. Dolorem autem aliquam libero enim laboriosam, praesentium vero dolor velit, repellendus accusantium corporis facilis recusandae nesciunt, necessitatibus quos rem provident! Possimus asperiores rem iure repellat alias ab exercitationem ipsam voluptates neque. Aliquam odio neque maxime fuga ea quo culpa provident sequi deleniti ipsam quidem unde labore nesciunt, autem aliquid sed ipsum omnis suscipit! Dolorem mollitia animi accusamus deleniti dignissimos similique quas perferendis aliquid facilis quaerat? Aut nulla perferendis minus at ex dolore reprehenderit quisquam a vitae sit cumque doloribus maxime, ea officiis!</p>
                 </article>
-                
                 <article class="abouts">
                     <h3 class="about--info">Perfil</h3>
                     <p class="about--info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore ullam dolores nihil distinctio maxime. Beatae natus minima earum veritatis ipsam.</p>
@@ -244,18 +252,9 @@
         </div>
     </section>
     <footer class="footer">© Copyright 2019. | Diseñado por chjesus</footer>
-    <div class="menu--mobile">
-        <nav class="menu">
-            <ul id="menu-mobile" style="text-align: center; list-style: none;">
-                <li class="menu--items"><a href="#" class="menu--item">inicio</a></li>
-                <li class="menu--items"><a href="#" class="menu--item">sobre mi</a></li>
-                <li class="menu--items"><a href="#" class="menu--item">sevicios</a></li>
-                <li class="menu--items"><a href="#" class="menu--item">portafolio</a></li>
-                <li class="menu--items"><a href="#" class="menu--item">contacto</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="menu--bar"><i class="icon-menu"></i></div>
+    <!--
+        <div class="menu--bar"><i class="icon-menu"></i></div>
+    -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/smooth-scroll.polyfills.min.js"></script>
     <script src="js/main.js"></script>
