animacion Header Mejorada

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="header--title">
-            <h1 class="title title--animate" id="title">Jesús Chacón<span class="sub--title" id="sub">|</span></h1>
+            <h1 class="title title--animate" id="title">Jesús Chacón<span class="sub--title">|</span></h1>
         </div>
         <div class="header--social">
             <div class="menu--social">
