--- a/index.html
+++ b/index.html
@@ -115,59 +115,8 @@
         <div class="margin--outside">
             <h2 class="portfolios--title">Portfolio</h2>
             <div class="portfolio__container">
-                <div class="certificado__container">
+                <div class="certificado__container" id="certificates">
                     <h3 class="certificado__title">Certificates</h3>
-                    <div class="careers__container">
-                        <div class="badge">
-                            <div class="badge--image"></div>
-                            <h3 class="badge--title">Lorem, ipsum dolor.</h3>
-                            <i class="icon icon-plus"></i>
-                        </div>
-                        <div class="courses__container">
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="careers__container">
-                        <div class="badge">
-                            <div class="badge--image"></div>
-                            <h3 class="badge--title">Lorem, ipsum dolor.</h3>
-                            <i class="icon icon-plus"></i>
-                        </div>
-                        <div class="courses__container">
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="careers__container">
-                        <div class="badge">
-                            <div class="badge--image"></div>
-                            <h3 class="badge--title">Lorem, ipsum dolor.</h3>
-                            <i class="icon icon-plus"></i>
-                        </div>
-                        <div class="courses__container">
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                            <div class="courses">
-                                <div class="courses--image"></div>
-                                <h3 class="courses--title">Lorem, ipsum dolor.</h3>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="proyectos--container">
                     <h3 class="proyecto__title">Projects</h3>
