se agrego el contenido

--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
             <div class="services--container">
                 <article class="service">
                     <figure class="service--container"><i class="icon-mobile2"></i></figure>
-                    <h3 class="service--title">Lorem, ipsum dolor.</h3>
-                    <p class="service--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, quisquam.</p>
+                    <h3 class="service--title">Design Web</h3>
+                    <p class="service--text">Maquetado y diseno web responsive, para que se adapte a cualquier pantalla incluyendo moviles y tablas.</p>
                 </article>
                 <article class="service">
                     <div class="service--container"><i class="icon-mobile2"></i></div>
-                    <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                    <h3 class="service--title">Desarrollo Web</h3>
                     <p class="service--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, quisquam.</p>
                 </article>
                 <article class="service">
                     <div class="service--container"><i class="icon-react"></i></div>
-                    <h3 class="service--title">Lorem, ipsum dolor.</h3>
-                    <p class="service--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, quisquam.</p>
+                    <h3 class="service--title">ReactJs</h3>
+                    <p class="service--text">Adaptaremos o crearemos tu sitio web usando las nuevas tecnologias como reactJs  y/o GastbysJs</p>
                 </article>
             </div>
         </div>
