--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <header class="header">
         <div class="title__content">
-            <div class="wrapper">
+            <div class="wrapper" id="wrapper">
                 <h1 class="title" data-name="Hey there !"></h1>
                 <h1 class="title" data-name="I'm Jesús Chacón"></h1>
                 <h1 class="title" data-name="Independent "></h1>
