--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Author: Jesús Chacón, Developer: Front-end, Category: Javascript">
-    <meta name="theme-color" content="#db5945"/>
-    <link rel="icon" type="image/png" href="img/Recurso.png" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Jesús Chacón</title>
-</head>
+<link href="css/app.css" rel="stylesheet"></head>
 <body id="header">
     <div class="navigation">
         <input type="checkbox" class="navigation--check" id="nav--toggle">
@@ -32,7 +26,7 @@
             <div class="wrapper" id="wrapper">
                 <h1 class="title" data-name="Hey there !"></h1>
                 <h1 class="title" data-name="I'm Jesús Chacón"></h1>
-                <h1 class="title" data-name="Independent "></h1>
+                <h1 class="title title--mobile" data-name="Independent: "></h1>
             </div>
             <a href="https://github.com/chjesus" target="_blank" class="btn"><i class="icon-github"></i><span>Github</span></a>
             <a href="https://codepen.io/chjesus/" target="_blank" class="btn"><i class="icon-codepen"></i><span>Codepen</span></a>
@@ -42,8 +36,13 @@
         <div class="margin--outside">
             <h2 class="about--title">About me</h2>
             <div class="about--container">
-                <article class="abouts" >
-                    <p class="about--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum minus esse earum sapiente adipisci quos, repellat beatae reprehenderit. Dolorem autem aliquam libero enim laboriosam, praesentium vero dolor velit, repellendus accusantium corporis facilis recusandae nesciunt, necessitatibus quos rem provident! Possimus asperiores rem iure repellat alias ab exercitationem ipsam voluptates neque. Aliquam odio neque maxime fuga ea quo culpa provident sequi deleniti ipsam quidem unde labore nesciunt, autem aliquid sed ipsum omnis suscipit! Dolorem mollitia animi accusamus deleniti dignissimos similique quas perferendis aliquid facilis quaerat? Aut nulla perferendis minus at ex dolore reprehenderit quisquam a vitae sit cumque doloribus maxime, ea officiis!</p>
+                <article class="abouts">
+                    <p class="about--text">
+                        I am an student and developer front-end creative, proactive and committed to a passion to make things beautiful and efficient.
+                        I am passionate about solving problems, learning, constantly improving myself every day in my academic training and putting technology at the service of people. 
+                        As a previous video game competitor, I discovered that my focus was what separated me from the many other players. 
+                        It's my current passion on the web and create content!
+                    </p>
                 </article>
                 <article class="abouts">
                     <h3 class="about--info">Habilidades</h3>
@@ -54,7 +53,7 @@
                                 <div class="info">20%</div>
                             </div>
                         </div>
-                        <strong>Css3 / SassS</strong>
+                        <strong>Css3 / Sass</strong>
                         <div class="about--skill">
                             <div class="skill--bar" data-width="65">
                                 <div class="info">20%</div>
@@ -62,13 +61,13 @@
                         </div>
                         <strong>Javascript</strong>
                         <div class="about--skill">
-                            <div class="skill--bar" data-width="50">
+                            <div class="skill--bar" data-width="55">
                                 <div class="info">20%</div>
                             </div>
                         </div>
                         <strong>ReactJS</strong>
                         <div class="about--skill">
-                            <div class="skill--bar" data-width="40">
+                            <div class="skill--bar" data-width="50">
                                 <div class="info">20%</div>
                             </div>
                         </div>
@@ -80,7 +79,7 @@
                         </div>  
                         <strong>Webpack</strong>
                         <div class="about--skill">
-                            <div class="skill--bar" data-width="30">
+                            <div class="skill--bar" data-width="40">
                                 <div class="info">20%</div>
                             </div>
                         </div>
@@ -95,18 +94,18 @@
             <div class="services--container">
                 <article class="service">
                     <figure class="service--container"><i class="icon-mobile2"></i></figure>
-                    <h3 class="service--title">Design Web</h3>
-                    <p class="service--text">Maquetado y diseno web responsive, para que se adapte a cualquier pantalla incluyendo moviles y tablas.</p>
+                    <h3 class="service--title">Web Design</h3>
+                    <p class="service--text">Responsive web design, so that it adapts to any screen including phones and tables.</p>
                 </article>
                 <article class="service">
                     <div class="service--container"><i class="icon-mobile2"></i></div>
-                    <h3 class="service--title">Desarrollo Web</h3>
-                    <p class="service--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, quisquam.</p>
+                    <h3 class="service--title">Web development</h3>
+                    <p class="service--text">Well documented easy to understand code makes life easier for everyone.</p>
                 </article>
                 <article class="service">
                     <div class="service--container"><i class="icon-react"></i></div>
-                    <h3 class="service--title">ReactJs</h3>
-                    <p class="service--text">Adaptaremos o crearemos tu sitio web usando las nuevas tecnologias como reactJs  y/o GastbysJs</p>
+                    <h3 class="service--title">Modularity</h3>
+                    <p class="service--text">Whether styling (sass, less, BEM) or DOM manipulation, I write modular, reusable, and scalable code.</p>
                 </article>
             </div>
         </div>
@@ -138,7 +137,7 @@
     </section>
     <section class="contacts" id="contacts">
         <div class="margin--outside">
-            <h2 class="contacts--title">Contacto</h2>
+            <h2 class="contacts--title">Contact</h2>
             <div class="contacts--container">
                 <article class="contact">
                     <div class="contact--details">
@@ -146,7 +145,7 @@
                             <i class="icon-mail4"></i>
                         </div>
                         <div class="contact--description">
-                            <h3 class="contact--title">Correo</h3>
+                            <h3 class="contact--title">Email</h3>
                             <p class="contact--text">chjesuscode@gmail.com</p>
                         </div>
                     </div>
@@ -155,7 +154,7 @@
                             <i class="icon-phone"></i>
                         </div>
                         <div class="contact--description">
-                            <h3 class="contact--title">Télefono</h3>
+                            <h3 class="contact--title">Phone</h3>
                             <p class="contact--text">(+58) 424 7258343</p>
                         </div>
                     </div>
@@ -174,14 +173,14 @@
                         </div>
                         <div class="contact--description">
                             <h3 class="contact--title">Linkedin</h3>
-                            <p class="contact--text">Lorem, ipsum dolor.</p>
+                            <p class="contact--text">
+                                <a href="https://www.linkedin.com/in/jesus-chacon-510643162/" target="_blank">My Profile</a>
+                            </p>
                         </div>
                     </div>
                 </article>
             </div>
         </div>
     </section>
-    <script src="js/smooth-scroll.polyfills.min.js"></script>
-    <script src="js/main.js"></script>
-</body>
+<script src="js/app.js"></script></body>
 </html>
