--- a/index.html
+++ b/index.html
@@ -129,24 +129,39 @@
                     <div class="proyectos">
                         <i class="icon-codepen"></i>
                         <div>
-                            <h3 class="proyectos--title">Currency Converter. <a href="https://chjesus.github.io/conversor/" target="_blank">Click Here</a></h3>
+                            <h3 class="proyectos--title">Currency Converter. 
+                              <a href="https://chjesus.github.io/conversor/" target="_blank">Click Here</a>
+                            </h3>
                             <h4 class="proyectos--subtitle">Made with: ReactJs</h4>
                         </div>
                     </div>
                     <div class="proyectos">
                         <i class="icon-codepen"></i>
                         <div>
-                            <h3 class="proyectos--title">Game Simon Says. <a href="https://chjesus.github.io/Simon-Dice/" target="_blank">Click Here</a></h3>
+                            <h3 class="proyectos--title">Game Simon Says. 
+                              <a href="https://chjesus.github.io/Simon-Dice/" target="_blank">Click Here</a>
+                            </h3>
                             <h4 class="proyectos--subtitle">Made with: Vanilla JavaScript</h4>
                         </div>
                     </div>
                     <div class="proyectos">
                         <i class="icon-codepen"></i>
                         <div>
-                            <h3 class="proyectos--title">Pong-Atari. <a href="https://chjesus.github.io/Pong-Atari/" target="_blank">Click Here</a></h3>
+                            <h3 class="proyectos--title">Pong-Atari. 
+                              <a href="https://chjesus.github.io/Pong-Atari/" target="_blank">Click Here</a>
+                            </h3>
                             <h4 class="proyectos--subtitle">Made with: Animations using CSS3 and JavaScript</h4>
                         </div>
                     </div>
+                    <div class="proyectos">
+                      <i class="icon-codepen"></i>
+                      <div>
+                          <h3 class="proyectos--title">Template CV. 
+                            <a href="https://chjesus.github.io/Template/" target="_blank">Click Here</a>
+                          </h3>
+                          <h4 class="proyectos--subtitle">Made with: HTML5, CSS3 and JavaScript</h4>
+                      </div>
+                  </div>
                 </div>
             </div>
         </div>
